<resources>
    <string name="app_name">StoryShare</string>
    <string name="landing_text">A platform to share your story!</string>
    <string name="button_start"><![CDATA[Get Started Here >]]></string>
    <string name="app_slogan">Share your story now</string>
    <string name="label_name">Name</string>
    <string name="input_name">Enter your name</string>
    <string name="label_email">Email</string>
    <string name="input_email">example@company.com</string>
    <string name="label_password">Password</string>
    <string name="input_password">Min. 6 Characters</string>
    <string name="register">Register</string>
    <string name="label_register_account_exist">Already have an account?</string>
    <string name="login">Login</string>
    <string name="label_account_exist">Already have an account?</string>
    <string name="label_account_regist">Don\'t have an account?</string>
    <string name="success_register">Registration Success, please login</string>
    <string name="failed_register">Name, email, or password can\'t be empty</string>
    <string name="label_home">Home</string>
    <string name="label_post">Post</string>
    <string name="label_profile">Profile</string>
    <string name="post_headings">Post a Picture!</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="label_description">Description</string>
    <string name="post">Post</string>
    <string name="logout">Logout</string>
</resources>